--- a/index.html
+++ b/index.html
@@ -4,14 +4,65 @@
   <title>Lead</title>
   <meta charset="UTF-8">
   <style>
-    body { font-family: 'Segoe UI', Roboto, Arial, sans-serif; background-color: #f7f8fa; color: #333; }
-    .container { max-width: 600px; margin: auto; background: #fff; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.05); padding: 25px; }
-    .header { background: linear-gradient(135deg, #00bcd4, #9c27b0); color: #fff; padding: 25px; text-align: center; border-radius: 12px 12px 0 0; }
-    .button { padding: 12px 20px; margin: 5px; border-radius: 6px; text-decoration: none; color: #fff; display: inline-block; cursor: pointer; }
-    .obs { background-color: #4caf50; }
-    .nie { background-color: #ff9800; }
-    .odrz { background-color: #f44336; }
-    .buttons { text-align: center; margin: 20px 0; }
+    <style>
+  body {
+    font-family: 'Segoe UI', Roboto, Arial, sans-serif;
+    background-color: #f7f8fa;
+    color: #333;
+    margin: 0;
+    padding: 0;
+  }
+
+  .container {
+    width: 90%;           /* zajmuje 90% szerokości ekranu */
+    max-width: 600px;     /* ale nie większe niż 600px na dużym ekranie */
+    margin: 10px auto;    /* centrowanie i minimalny margines */
+    background: #fff;
+    border-radius: 12px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+    padding: 20px;
+    box-sizing: border-box;
+  }
+
+  .header {
+    background: linear-gradient(135deg, #00bcd4, #9c27b0);
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+    border-radius: 12px 12px 0 0;
+  }
+
+  .button {
+    padding: 12px 18px;
+    margin: 5px;
+    border-radius: 6px;
+    text-decoration: none;
+    color: #fff;
+    display: inline-block;
+    cursor: pointer;
+    font-size: 16px;
+  }
+
+  .obs { background-color: #4caf50; }
+  .nie { background-color: #ff9800; }
+  .odrz { background-color: #f44336; }
+
+  .buttons { text-align: center; margin: 15px 0; }
+
+  /* RESPONSYWNE DOPASOWANIE NA TELEFONIE */
+  @media (max-width: 480px) {
+    .container {
+      width: 95%;
+      padding: 15px;
+    }
+    .button {
+      width: 100%;          /* przyciski zajmują całą szerokość */
+      font-size: 18px;
+      box-sizing: border-box;
+    }
+  }
+</style>
+
   </style>
   <script>
     // Pobranie parametrów GET z URL
