--- a/index.html
+++ b/index.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="pl">
 <head>
   <meta charset="UTF-8">
+
+  <!-- KLUCZOWE: poprawne wyświetlanie na telefonach -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Lead</title>
+
   <style>
     body {
       font-family: 'Segoe UI', Roboto, Arial, sans-serif;
       background-color: #f7f8fa;
       margin: 0;
       padding: 10px;
+
+      /* pełne centrowanie */
       display: flex;
       justify-content: center;
-      align-items: flex-start;
+      align-items: center;
       min-height: 100vh;
     }
 
     .container {
       width: 100%;
-      max-width: 500px; /* dopasowane do telefonu i desktopu */
+      max-width: 500px;
       background: #fff;
       border-radius: 12px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.05);
@@ -35,7 +42,7 @@
 
     .buttons {
       display: flex;
-      flex-direction: column; /* przyciski pod sobą na telefonie */
+      flex-direction: column;
       gap: 10px;
       margin: 15px 0;
     }
@@ -59,6 +66,7 @@
       .button { flex: 1; }
     }
   </style>
+
   <script>
     const params = new URLSearchParams(window.location.search);
     const row = params.get('row');
@@ -70,6 +78,7 @@
         .catch(() => alert("Webhook wysłany lub zamknij kartę ręcznie."));
     }
   </script>
+
 </head>
 <body>
   <div class="container">
@@ -86,7 +95,9 @@
       <div class="button odrz" onclick="sendStatus('odrzucony')">❌ Lead odrzucony</div>
     </div>
 
-    <p style="font-size:12px; color:#666;">💡 Ten lead został wygenerowany automatycznie przez system Zapier.</p>
+    <p style="font-size:12px; color:#666;">
+      💡 Ten lead został wygenerowany automatycznie przez system Zapier.
+    </p>
   </div>
 </body>
 </html>
