--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <title>Lead</title>
 
   <style>
+    html, body {
+      height: 100%;
+      overflow: hidden;
+    }
     body {
       font-family: 'Segoe UI', Roboto, Arial, sans-serif;
       background-color: #f7f8fa;
